WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159770
Fix the --minimal build fail in InjectedBundle.cpp
https://bugs.webkit.org/show_bug.cgi?id=159770
Summary
Fix the --minimal build fail in InjectedBundle.cpp
Csaba Osztrogonác
Reported
2016-07-14 09:11:15 PDT
build-webkit --minimal fails with the following error message: ../../Source/WebKit2/WebProcess/InjectedBundle/InjectedBundle.cpp:197:9: error: 'RuntimeEnabledFeatures' has not been declared ../../Source/WebKit2/WebProcess/InjectedBundle/InjectedBundle.cpp:200:9: error: 'RuntimeEnabledFeatures' has not been declared The problem is that RuntimeEnabledFeatures.h is included inside if guards, but used unconditionally in these lines. I can't see any good reason to include any header unconditionally, let's remove these guards to fix the build.
Attachments
Patch
(1.55 KB, patch)
2016-07-14 09:14 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2016-07-14 09:14:36 PDT
Created
attachment 283651
[details]
Patch
Csaba Osztrogonác
Comment 2
2016-07-15 06:37:25 PDT
note: revealed by
http://trac.webkit.org/changeset/202091
: -#if ENABLE(SHADOW_DOM) if (preference == "WebKitShadowDOMEnabled") RuntimeEnabledFeatures::sharedFeatures().setShadowDOMEnabled(enabled); -#endif Now shadow DOM is used unconditionally and we need to include RuntimeEnabledFeatures.h always.
WebKit Commit Bot
Comment 3
2016-07-18 23:50:57 PDT
Comment on
attachment 283651
[details]
Patch Clearing flags on attachment: 283651 Committed
r203398
: <
http://trac.webkit.org/changeset/203398
>
WebKit Commit Bot
Comment 4
2016-07-18 23:51:01 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug