Fix the --minimal build fail in InjectedBundle.cpp https://bugs.webkit.org/show_bug.cgi?id=159770

Reviewed by Benjamin Poulain.

* WebProcess/InjectedBundle/InjectedBundle.cpp:


git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203398 268f45cc-cd09-0410-ab3c-d52691b4dbfc